--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,13 @@
 
     <string name="nav_item_home">Home</string>
     <string name="nav_item_favourites">Favourites</string>
+    <string name="nav_item_about">About</string>
 
     <!-- Navigation drawer item labels -->
     <string-array name="nav_drawer_labels">
         <item>@string/nav_item_home</item>
         <item>@string/nav_item_favourites</item>
+        <item>@string/nav_item_about</item>
     </string-array>
 
     <string name="title_favourites">Favourites</string>
