--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="btn_update_fav_item">Update</string>
     <string name="btn_delete_fav_item">Delete</string>
     <string name="btn_refresh_fav_item_list">Refresh</string>
+    <string name="title_activity_search_screen">SearchScreen</string>
 </resources>
