Playing with Places API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,19 @@
     <string name="btn_update_fav_item">Update</string>
     <string name="btn_delete_fav_item">Delete</string>
     <string name="btn_refresh_fav_item_list">Refresh</string>
+
+    <string name="google_app_id">499829945363</string>
+
+    <!-- MODEL -->
+    <string name="offline">Bus currently offline.</string>
+    <string name="less_one_minute">Less than 1 minute</string>
+    <string name="one_minute">1 minute</string>
+    <string name="minutes">" minutes"</string>
+    <string name="hour">1 hour</string>
+    <string name="hours">" hours"</string>
+    <string name="hours_and">" hours and "</string>
+    <string name="hour_and_one_min">1 hour and 1 minute</string>
+    <string name="hour_and">"1 hour and "</string>
+    <string name="via">"via "</string>
+    <string name="next_bus_in">Next Bus In:</string>
 </resources>
