--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="btn_delete_fav_item">Delete</string>
     <string name="btn_refresh_fav_item_list">Refresh</string>
     <string name="title_activity_search_screen">SearchScreen</string>
+    <string name="title_activity_route_screen">RouteScreen</string>
 </resources>
