Added AutoComplete to Search Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="action_search">Search</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
-
+    <string name="nav_item_back">Back</string>
     <string name="nav_item_home">Home</string>
     <string name="nav_item_favourites">Favourites</string>
     <string name="nav_item_about">About</string>
