--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="icon_location_item">Location Icon</string>
     <string name="icon_bus_line">Bus Line Icon</string>
     <string name="icon_more">More</string>
+    <string name="icon_logo">IB BusTracker Logo</string>
     <string name="recent_locations">Recently searched locations</string>
 
     <string name="ok">OK</string>
