--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,8 @@
     <string name="action_map_satellite">Satellite</string>
     <string name="action_map_clear">Clear Map</string>
     <string name="action_map_find_stations">Find Bus Stations</string>
+
+    <!--PLACE PICKER-->
+    <string name="hint_loc_from">From:</string>
+    <string name="hint_loc_to">To:</string>
 </resources>
